--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
     "name": "try3",
     "version": "1.0.0",
+    "scripts": {
+        "start": "node ./server.js"
+    },
     "dependencies": {
         "@tensorflow-models/handpose": "^0.0.7",
         "@tensorflow/tfjs-backend-webgl": "^2.8.6",
